style/portal.scss
/* ... */
// Blog Post
.post-card {
	display: block;
	background: white;
	padding: 0;
	margin: $padding-lg 0;
	line-height: 1.47;
	overflow: hidden;
	@include border-radius(4px);
	@include box-shadow($boxShadow);

	.post-image {
		height: 200px;
		background-position: center center;
		background-size: cover;
		background-color: #D6E5F9;
		z-index: 1;
		position: relative;
	}

	.post-content {
		padding: $padding-xl;
		color: $textColor;

		.post-category {
			color: $textColorLight;
			margin: 0 0 $padding-sm;

			span {
				color: inherit;
				float: right;
			}
		}

		.post-author {
			color: $textColorLight;
			margin: 0 0 $padding-sm;

			span {
				color: inherit;
				float: right;

                &.liked {
                    color: $blueAlert;
                }
			}
		}

		.post-title {
			display: -webkit-box;
			font-size: 22px;
			margin-bottom: $padding-sm;
			line-height: 1.47;
			font-weight: $fontBold;
			height: 65px;
			overflow: hidden;
			-webkit-line-clamp: 2;
			-webkit-box-orient: vertical;
			text-overflow: ellipsis;
			@include transition(all 200ms ease-in);
		}

		.post-description {
			display: -webkit-box;
			height: 60px;
			overflow: hidden;
			-webkit-line-clamp: 3;
			-webkit-box-orient: vertical;
			text-overflow: ellipsis;
		}
	}

	&:hover {
		@include box-shadow($boxShadowHover);

		.post-content {
			.post-title {
				color: $primaryColor;
			}
		}
	}
}

// Blog Single
.blog-single {
    padding-top: 2*$padding-xl;
    font-size: $fontSizeMedium;

	@media (max-width: 992px) {
		padding-top: $padding-xl;
	}

    .like-button {
        display: block;
        position: fixed;
        width: $inputSizeLg;
        height: $inputSizeLg;
        line-height: $inputSizeLg - 1px;
        background: white;
        color: $blueAlert;
        text-align: center;
        right: $padding-xl;
        top:  4*$padding-xl;
        font-size: 22px;
        @include border-radius(.5*$inputSizeLg);
        @include transform(scale(.85));
        @include box-shadow($boxShadowHover);
        @include transition(all .1s linear);

        &:hover {
            background: $blueAlert;
            color: white;
            @include transform(scale(1));
            @include transition(all .1s linear);
        }
    }

    .blog-title, .blog-meta {
        text-align: center;
    }

    .featured-image {
        margin-top: $padding-xl;
        padding: (2*$padding) $padding 0;
		text-align: center;

        figure {
			display: inline-block;
            max-height: 400px;
            overflow: hidden;
			margin: 0 auto;
            padding: 0;
			border: none;
			@include box-shadow($boxShadow);

            img {
                max-width: 100%;
            }
        }
    }

    article {
		max-width: 850px;
		margin: 0 auto;
		padding: (2*$padding-xl) 0 (5*$padding-xl);
		font-size: 22px;
		font-weight: $fontMedium;

		p {
			color: $textColorDark;
            font-size: $fontSizeMedium;
		}

        img {
			position: relative;
            background: white;
			padding: $padding-xs;
			width: 100%;
			border: 1px solid $borderColor;
        }

		ol, ul, blockquote {
			position: relative;
			background: white;
			font-size: $fontSizeMedium;
			padding-top: $padding-lg;
			padding-bottom: $padding-lg;
			margin-left: -2*$padding-xl;
			margin-right: -2*$padding-xl;
			@include box-shadow($boxShadow);
		}

		blockquote {
			padding: $padding;
		}

		.post-author {
			margin-top: 3*$padding-xl;
            background: white;
            padding: $padding-xl;
            @include border-radius(4px);
            @include box-shadow($boxShadowHover);

			.profile-card {
				padding-left: $inputSizeMd + $padding-lg;
				line-height: $inputSizeMd;
				display: inline-block;
                position: relative;

				.profile-name {
				    font-family: 'Homemade Apple', cursive;
				    color: $textColorDark;
				    font-size: $fontSizeLarge;
				}

                p {
                    line-height: $lineHeight;
                }

				img {
					position: absolute;
					left: 0;
					top: 0;
					width: $inputSizeMd;
					height: $inputSizeMd;
					padding: 0;
					border: none;
					@include border-radius(50%);
				}

                &:hover {
                    .profile-name {
                        color: $primaryColor;
                    }
                }
			}
		}

		@media (max-width: 992px) {
			padding-left: $padding-lg;
			padding-right: $padding-lg;

			ol, ul, blockquote {
				margin-left: 0;
				margin-right: 0;
			}
		}
    }
}
/* ... */

